--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
 </head>
+<base href="/">
 <body>
   <app-root></app-root>
 </body>
